--- a/app/globals.css
+++ b/app/globals.css
@@ -25,13 +25,25 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-
 .rag-red {
-    background-color: #d9543044;
+  background-color: #d9543044;
 }
 .rag-blue {
-    background-color: #307fd944;
+  background-color: #307fd944;
 }
 .rag-green {
-    background-color: #30d9a144;
+  background-color: #30d9a144;
+}
+.rag-yellow {
+  background-color: #d9c03044;
+}
+.rag-purple {
+  background-color: #a630d944;
+}
+
+.ag-paging-panel {
+    height: auto;
+    flex-wrap: wrap-reverse;
+    row-gap: 1rem;
+    padding: 1rem;
 }
